--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "multer": "^1.4.2",
     "sqlite3": "^4.2.0",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.3",
+    "ts-node-dev": "^1.0.0-pre.44"
   },
   "devDependencies": {
     "ts-node-dev": "^1.0.0-pre.44"
