--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: node_js
 node_js:
   - 12.17.0
-script: true
+
+before_script:
+  - npm run setup
+  - npm run build
+
 deploy:
   provider: heroku
   api_key:
