--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "nlw-ecoleta-api",
   "version": "1.0.0",
   "main": "src/server.ts",
+  "type": "module",
+
   "scripts": {
-    "setup": "npm install",
-    "build": "tsc",
-    "build-watch": "tsc --watch",
     "start": "ts-node ./src/server.ts",
     "dev": "ts-node-dev --transpileOnly --ignore-watch node_modules src/server.ts",
     "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
