--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
 
   "scripts": {
-    "start": "ts-node ./src/server.ts",
+    "start": "ts-node --transpile-only --experimental-modules ./src/server.ts",
     "dev": "ts-node-dev --transpileOnly --ignore-watch node_modules src/server.ts",
     "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
     "knex:seed": "knex --knexfile knexfile.ts seed:run"
