--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - 12.17.0
+  - 12
 
 deploy:
   provider: heroku
@@ -9,9 +9,11 @@ deploy:
   on:
     branch: master
   run:
+    - "yarn build"
+    - "yarn install"
+    - "yarn postinstall"
     - "yarn knex:migrate"
     - "yarn knex:seed"
-    - "npm start"
 
 notifications:
   email: false
